bug(navigation): fixed overflow

--- a/.aw/src/css/navigation.css
+++ b/.aw/src/css/navigation.css
@@ -66,7 +66,7 @@
     white-space: nowrap;
     display: flex;
     flex-direction: column;
-
+    max-height: 70vh;
 }
 
 .navigation-bar--content a {
